--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dependencies": {
         "ethers": "^5.6.8",
         "express": "^4.18.1",
+        "freewhois": "^1.2.2",
         "node-fetch": "2.0.0",
         "puppeteer": "^14.1.1"
     }
